Create core retrofit builder

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,10 +20,17 @@ android {
         }
     }
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+    flavorDimensions 'platform', 'environment'
+    productFlavors {
+        google { dimension 'platform' }
+        huawei { dimension 'platform' }
+
+        dev {
+            applicationIdSuffix ".dev"
+            dimension 'environment'
+        }
+        prod {
+            dimension 'environment'
         }
     }
     compileOptions {
