--- a/settings.gradle
+++ b/settings.gradle
@@ -15,4 +15,4 @@ dependencyResolutionManagement {
 rootProject.name = "sample-feature-module"
 include ':app'
 include ':login'
-include ':common'
+include ':common:core'
