--- a/Common/core/build.gradle
+++ b/Common/core/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 android {
-    namespace 'com.example.login'
+    namespace 'com.example.core'
     compileSdk 33
 
     defaultConfig {
@@ -14,25 +14,21 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
-
     buildTypes {
-        buildTypes {
-            debug {
-                buildConfigField "String", "BASE_URL", '"https://api.agify.io/"'
-                shrinkResources false
-                debuggable true
-                minifyEnabled false
-            }
-            release {
-                buildConfigField "String", "BASE_URL", '"https://api.agify.io/"'
-                shrinkResources false
-                debuggable false
-                minifyEnabled false
-                proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            }
+        debug {
+            buildConfigField "String", "BASE_URL", '"https://api.agify.io/"'
+            shrinkResources false
+            debuggable true
+            minifyEnabled false
+        }
+        release {
+            buildConfigField "String", "BASE_URL", '"https://api.agify.io/"'
+            shrinkResources false
+            debuggable false
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
     flavorDimensions 'platform', 'environment'
     productFlavors {
         google { dimension 'platform' }
@@ -53,28 +49,17 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures {
-        compose true
-    }
-
-    composeOptions {
-        kotlinCompilerExtensionVersion "1.3.2"
-    }
 }
 
 dependencies {
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.10'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.10'
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
-    implementation platform('androidx.compose:compose-bom:2022.10.00')
-    implementation "androidx.compose.ui:ui"
-    implementation "androidx.compose.material:material"
-    implementation "androidx.compose.ui:ui-tooling-preview"
-    implementation 'androidx.activity:activity-compose'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4"
-    debugImplementation "androidx.compose.ui:ui-tooling"
 }
