Create data layer and login repository

--- a/login/build.gradle
+++ b/login/build.gradle
@@ -63,6 +63,8 @@ android {
 }
 
 dependencies {
+    api project(":common:core")
+
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
@@ -77,4 +79,8 @@ dependencies {
     implementation 'androidx.activity:activity-compose'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4"
     debugImplementation "androidx.compose.ui:ui-tooling"
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.google.code.gson:gson:2.10'
+
 }
