--- a/Common/core/build.gradle
+++ b/Common/core/build.gradle
@@ -3,6 +3,12 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
+ext {
+    okhttp = "5.0.0-alpha.10"
+    retrofit = "2.9.0"
+    gson = "2.10"
+}
+
 android {
     namespace 'com.example.core'
     compileSdk 33
@@ -52,14 +58,17 @@ android {
 }
 
 dependencies {
-    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.10'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.10'
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    api "com.google.code.gson:gson:$gson"
+    api "com.squareup.retrofit2:retrofit:$retrofit"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit"
+    implementation "com.squareup.okhttp3:okhttp:$okhttp"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp"
 }
