--- a/login/build.gradle
+++ b/login/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -80,5 +83,10 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4"
 
     debugImplementation "androidx.compose.ui:ui-tooling"
+
+    // Hilt
+    implementation "com.google.dagger:hilt-android:2.44"
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+    kapt "com.google.dagger:hilt-android-compiler:2.44"
 
 }
